Handle homepage localization (en)

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -723,6 +723,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 400;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
