--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -3811,16 +3811,24 @@ textarea.form-control.is-invalid {
   top: 0px;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
 .right-2 {
   right: 0.5rem;
 }
 
 .top-5 {
   top: 1.25rem;
-}
-
-.left-2 {
-  left: 0.5rem;
 }
 
 .mx-auto {
@@ -3947,6 +3955,14 @@ textarea.form-control.is-invalid {
   height: 50px;
 }
 
+.h-\[60px\] {
+  height: 60px;
+}
+
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-\[550px\] {
   height: 550px;
 }
@@ -4001,6 +4017,26 @@ textarea.form-control.is-invalid {
 
 .w-60 {
   width: 15rem;
+}
+
+.w-\[60px\] {
+  width: 60px;
+}
+
+.w-\[560px\] {
+  width: 560px;
+}
+
+.w-\[310px\] {
+  width: 310px;
+}
+
+.w-\[65px\] {
+  width: 65px;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-7 {
@@ -4252,6 +4288,11 @@ textarea.form-control.is-invalid {
   padding-bottom: 0.5rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -4260,11 +4301,6 @@ textarea.form-control.is-invalid {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .pt-5 {
